/*
 * Copyright Camunda Services GmbH and/or licensed to Camunda Services GmbH
 * under one or more contributor license agreements. Licensed under a commercial license.
 * You may not use this file except in compliance with the commercial license.
 */

import React from 'react';
import {shallow} from 'enzyme';

import {EntityList, Deleter} from 'components';

import {removeSource, editSource, addSources} from './service';

import SourcesListWithErrorHandling from './SourcesList';
import EditSourceModal from './modals/EditSourceModal';
import AddSourceModal from './modals/AddSourceModal';
import {areTenantsAvailable} from 'config';

jest.mock('config', () => ({areTenantsAvailable: jest.fn().mockReturnValue(true)}));

jest.mock('./service', () => ({
  getSources: jest.fn().mockReturnValue([
    {
      id: 'process:defKey',
      definitionType: 'process',
      definitionKey: 'defKey',
      definitionName: 'definition name',
      tenants: [
        {id: null, name: 'Not defined'},
        {id: 'tenant1', name: 'Sales'}
      ]
    },
    {
      id: 'decision:defKey2',
      definitionType: 'decision',
      definitionKey: 'defKey2',
      definitionName: 'decision report',
      tenants: [
        {id: null, name: 'Not defined'},
        {id: 'tenant1', name: 'Marketing'}
      ]
    }
  ]),
  removeSource: jest.fn(),
  editSource: jest.fn(),
  addSources: jest.fn()
}));

const SourcesList = SourcesListWithErrorHandling.WrappedComponent;

const props = {
  mightFail: jest.fn().mockImplementation((data, cb) => cb(data)),
  collection: 'collectionId',
  readOnly: false
};

it('should match snapshot', async () => {
  const node = shallow(<SourcesList {...props} />);
  await node.update();

  expect(node).toMatchSnapshot();
});

it('should hide add button and edit menu when in readOnly mode', async () => {
  const node = shallow(<SourcesList {...props} readOnly />);
  await node.update();

  expect(node).toMatchSnapshot();
});

it('should pass entity to Deleter', async () => {
  const node = shallow(<SourcesList {...props} />);
  await node.update();

  node
    .find(EntityList)
    .prop('data')[0]
    .actions[1].action();

  expect(node.find(Deleter).prop('entity').id).toBe('process:defKey');
});

it('should delete source', () => {
  const node = shallow(<SourcesList {...props} />);

  node.setState({deleting: {id: 'sourceId'}});

  node.find(Deleter).prop('deleteEntity')();

  expect(removeSource).toHaveBeenCalledWith('collectionId', 'sourceId');
});

it('should show an edit modal when clicking the edit button', async () => {
  const node = shallow(<SourcesList {...props} />);
  await node.update();

  node
    .find(EntityList)
    .prop('data')[0]
    .actions[0].action();

  expect(node.find(EditSourceModal)).toExist();
});

it('should modify the tenants in source', () => {
  const node = shallow(<SourcesList {...props} />);

  node.setState({editing: {id: 'sourceId'}});
  const updatedTenants = [{id: 'newTenant', name: 'New Tenant'}];
  node.find(EditSourceModal).prop('onConfirm')(updatedTenants);

  expect(editSource).toHaveBeenCalledWith('collectionId', 'sourceId', updatedTenants);
});

it('should add sources when addSourceModal is confirmed', () => {
  const node = shallow(<SourcesList {...props} />);

  node.setState({addingSource: true});
  const sources = [
    {
      id: 'sourceId',
      definitionType: 'process',
      definitionKey: 'defKey',
      tenants: ['tenantId']
    }
  ];
  node.find(AddSourceModal).prop('onConfirm')(sources);

  expect(addSources).toHaveBeenCalledWith('collectionId', sources);
});

it('should hide edit and tenants in source items if there are not tenants available', async () => {
  areTenantsAvailable.mockReturnValueOnce(false);
  const node = shallow(<SourcesList {...props} />);
  await node.update();
  expect(node.find('EntityList').props().data[0]).toMatchSnapshot();
});
