// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide add button and edit menu when in readOnly mode 1`] = `
<div
  className="SourcesList"
>
  <EntityList
    action={false}
    data={
      Array [
        Object {
          "actions": Array [],
          "className": "process",
          "icon": <ForwardRef(SvgProcess) />,
          "meta1": "Not defined, Sales",
          "name": "definition name",
          "type": "Process",
        },
        Object {
          "actions": Array [],
          "className": "decision",
          "icon": <ForwardRef(SvgDecision) />,
          "meta1": "Not defined, Marketing",
          "name": "decision report",
          "type": "Decision Table",
        },
      ]
    }
    empty="There are no sources added yet"
    isLoading={false}
    name="Data Sources"
  />
  <DeleterErrorHandler
    deleteEntity={[Function]}
    entity={null}
    getName={[Function]}
    onClose={[Function]}
    onDelete={[Function]}
  />
  <AddSourceModalErrorHandler
    onClose={[Function]}
    onConfirm={[Function]}
    open={false}
    tenantsAvailable={true}
  />
</div>
`;

exports[`should hide edit and tenants in source items if there are not tenants available 1`] = `
Object {
  "actions": Array [
    Object {
      "action": [Function],
      "icon": "delete",
      "text": "Delete",
    },
  ],
  "className": "process",
  "icon": <ForwardRef(SvgProcess) />,
  "meta1": false,
  "name": "definition name",
  "type": "Process",
}
`;

exports[`should match snapshot 1`] = `
<div
  className="SourcesList"
>
  <EntityList
    action={
      <ForwardRef(Button)
        onClick={[Function]}
      >
        Add
      </ForwardRef(Button)>
    }
    data={
      Array [
        Object {
          "actions": Array [
            Object {
              "action": [Function],
              "icon": "edit",
              "text": "Edit",
            },
            Object {
              "action": [Function],
              "icon": "delete",
              "text": "Delete",
            },
          ],
          "className": "process",
          "icon": <ForwardRef(SvgProcess) />,
          "meta1": "Not defined, Sales",
          "name": "definition name",
          "type": "Process",
        },
        Object {
          "actions": Array [
            Object {
              "action": [Function],
              "icon": "edit",
              "text": "Edit",
            },
            Object {
              "action": [Function],
              "icon": "delete",
              "text": "Delete",
            },
          ],
          "className": "decision",
          "icon": <ForwardRef(SvgDecision) />,
          "meta1": "Not defined, Marketing",
          "name": "decision report",
          "type": "Decision Table",
        },
      ]
    }
    empty="There are no sources added yet"
    isLoading={false}
    name="Data Sources"
  />
  <DeleterErrorHandler
    deleteEntity={[Function]}
    entity={null}
    getName={[Function]}
    onClose={[Function]}
    onDelete={[Function]}
  />
  <AddSourceModalErrorHandler
    onClose={[Function]}
    onConfirm={[Function]}
    open={false}
    tenantsAvailable={true}
  />
</div>
`;
